	(gst_text_overlay_finalize), (gst_text_overlay_init),
	(gst_text_overlay_setcaps), (gst_text_overlay_src_event),
	(gst_text_overlay_render_text), (gst_text_overlay_text_pad_link),
	(gst_text_overlay_text_event), (gst_text_overlay_video_event),
	(gst_text_overlay_pop_text), (gst_text_overlay_text_chain),
	(gst_text_overlay_video_chain), (gst_text_overlay_change_state):
	* ext/pango/gsttextoverlay.h: Fix seeking both for muxed formats
	and subtitles files.

2006-02-19  Julien MOUTTE  <julien@moutte.net>

	* gst/playback/gstdecodebin.c: (mimetype_is_raw): pango layout
	should be considered as row.

2006-02-19  Julien MOUTTE  <julien@moutte.net>

	* gst/playback/gststreaminfo.c: (gst_stream_type_get_type),
	(cb_probe):
	* gst/playback/gststreaminfo.h: Introduce language informations.

2006-02-18  Jan Schmidt  <thaytan@mad.scientist.com>

	* sys/ximage/ximagesink.c: (gst_ximagesink_check_xshm_calls),
	(gst_ximagesink_ximage_new), (gst_ximagesink_ximage_destroy):
	* sys/xvimage/xvimagesink.c: (gst_xvimage_buffer_destroy),
	(gst_xvimagesink_check_xshm_calls), (gst_xvimagesink_xvimage_new):
	Set shared memory segments to be deleted as soon as we have attached,
	that way they get cleaned up automatically if we crash.

2006-02-18  Julien MOUTTE  <julien@moutte.net>

	* ext/pango/gstclockoverlay.c: (gst_clock_overlay_get_text): 
	* ext/pango/gsttimeoverlay.c: (gst_time_overlay_get_text): Those
	functions are called with lock held.

2006-02-18  Julien MOUTTE  <julien@moutte.net>

	* ext/pango/gsttextoverlay.c: (gst_text_overlay_base_init),
	(gst_text_overlay_finalize), (gst_text_overlay_init),
	(gst_text_overlay_setcaps), (gst_text_overlay_src_event),
	(gst_text_overlay_render_text), (gst_text_overlay_text_pad_link),
	(gst_text_overlay_text_pad_unlink), (gst_text_overlay_text_event),
	(gst_text_overlay_video_event), (gst_text_overlay_pop_text),
	(gst_text_overlay_text_chain), (gst_text_overlay_video_chain),
	(gst_text_overlay_change_state): Refactoring of textoverlay